# Handwriting-Recognition-Project

./: .gitignore  CMakeLists.txt  README.md
eval/: CMakeLists.txt  hrs-backend.cc  hrs-binary-search-eval.cc  hrs-frontend.py  hrs-linear-search-eval.cc  hrs-table-search-eval.cc  hrs-tree-search-eval.cc
include/: HRSBinarySearch.h  HRSLinearSearch.h  HRSTableSearch.h  HRSTreeSearch.h  IHandwritingRecSys.h  Image.h  Table.h  Table.inl  Tree.h  Tree.inl  Vector.h  Vector.inl  ece2400-stdlib.h  ece2400-stdlib.inl  mnist-utils.h  sort-directed-test.h  sort-random-test.h  sort.h  sort.inl  table-directed-test.h  table-random-test.h  tree-directed-test.h  tree-random-test.h  vector-directed-test.h  vector-random-test.h
scripts/: build.sh  coverage.sh  eval.sh  format.sh  memcheck.sh  test.sh  valgrind.sh
src/: CMakeLists.txt  HRSBinarySearch.cc  HRSLinearSearch.cc  HRSTableSearch.cc  HRSTreeSearch.cc  Image.cc  ece2400-stdlib.cc  image-adhoc.cc  mnist-utils.cc  sort-adhoc.cc  table-adhoc.cc  tree-adhoc.cc  vector-adhoc.cc
test/: CMakeLists.txt  hrs-binary-search-directed-test.cc  hrs-linear-search-directed-test.cc  hrs-table-search-directed-test.cc  hrs-tree-search-directed-test.cc  image-directed-test.cc  image-random-test.cc  sort-image-directed-test.cc  sort-image-random-test.cc  sort-int-directed-test.cc  sort-int-random-test.cc  table-image-directed-test.cc  table-image-random-test.cc  table-int-directed-test.cc  table-int-random-test.cc  tree-image-directed-test.cc  tree-image-random-test.cc  tree-int-directed-test.cc  tree-int-random-test.cc  (+4 more)
(+66 files in other folders)
